@@ -1,6 +1,7 @@
 Revision history for Hook-Lex-Wrap
 
 {{$NEXT}}
+        - properly wrap CORE::caller for @DB::args (RT#103186, Максим Лубянов)
 
 0.25    2014-10-21 02:32:56Z
         - fix for perl 5.21.4: ensure barewords are parsed properly (RT#99021,
